fixed the padding issues with my write button, so now everything is aligned

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,3 +1,7 @@
 body {
   background-color: #fbf0f0;
 }
+
+/* * {
+  border: 1px solid black;
+} */
